--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
 
       - name: Commit changes
         run: |
-          git config --global user.email "you@example.com"
-          git config --global user.name "Your Name"
+          git config --global user.email "a.baske86@gmail.com"
+          git config --global user.name "AbhishekBaske"
           git commit -am "Automated data update"
           git push
